# DEADGL

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFESTO.md  Makefile  PROOF.md  README.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
docs/: API.md  BUILD.md  COMMANDS.md  COMMAND_MACHINE.md  CONNECTOR_LIMIT.md  DGL_LANGUAGE.md  FINAL.md  IDENTITY.md  IMPLEMENTATION_QUEUE  INSPECT.md  LOCAL_RELEASE.md  NIGHTSHIFT.md  PERF.md  PIPELINE.md  PROBE.md  PROOF_FORMAT.md  README.md  RELEASE.md  RELEASE_V1.1.0.md  RELEASE_V1.2.0.md  RELEASE_V1.3.0.md  RELEASE_V1.4.0.md  RELEASE_V1.5.0.md  RELEASE_V1.6.0.md  RELEASE_V1.7.0.md  RELEASE_V1.8.0.md  RELEASE_V1.9.0.md  RELEASE_V10.0.0.md  RELEASE_V10.0.1.md  RELEASE_V11.0.0.md  RELEASE_V11.0.1.md  RELEASE_V2.0.0.md  RELEASE_V2.0.2.md  RELEASE_V2.0.3.md  RELEASE_V2.1.0.md  RELEASE_V2.2.0.md  RELEASE_V2.3.0.md  RELEASE_V2.4.0.md  RELEASE_V3.0.0.md  RELEASE_V3.1.0.md  (+18 more)
examples/: README.md  README_V12  command_machine.dgl  cube.dgl  depth.dgl  near_clip.dgl  raster_truth.dgl  raster_truth.hash  shrine.dgl  tri.dgl
include/: deadgl.h  deadgl_cli.h
scripts/: bench.sh  cut.ps1  debug_probe.sh  dgb_parity.ps1  dgb_parity.sh  final_gate.ps1  golden.ps1  golden.sh  parser_probe.ps1  publish.ps1  release.ps1  release.sh  resume_cut.ps1  verify_render_truth.sh
src/: deadgl.c  deadgl_cli.c  deadgl_front.c  deadgl_inspect.c  deadgl_inspect_core.c  deadgl_tile.c  deadpad.c  deadview.c
tests/: test_deadgl.c
