cmake_minimum_required(VERSION 3.16)
project(DEADGL VERSION 1.3.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
add_library(deadgl STATIC src/deadgl.c)
target_include_directories(deadgl PUBLIC include)
if (UNIX)
    target_link_libraries(deadgl PUBLIC m)
endif()
add_executable(deadgl_cli src/deadgl_cli.c)
target_link_libraries(deadgl_cli PRIVATE deadgl)
set_target_properties(deadgl_cli PROPERTIES OUTPUT_NAME deadgl)
add_executable(test_deadgl tests/test_deadgl.c)
target_link_libraries(test_deadgl PRIVATE deadgl)
enable_testing()
add_test(NAME core COMMAND test_deadgl)
add_test(NAME version COMMAND deadgl_cli --version)
add_test(NAME demo_shrine COMMAND deadgl_cli demo shrine -o shrine.ppm)
add_test(NAME demo_cube COMMAND deadgl_cli demo cube -o cube.ppm)
add_test(NAME command_machine COMMAND deadgl_cli run ${CMAKE_SOURCE_DIR}/examples/command_machine.dgl -o command_machine.ppm)
