cmake_minimum_required(VERSION 3.16)
project(DEADGL VERSION 2.4.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
add_library(deadgl STATIC src/deadgl.c)
target_include_directories(deadgl PUBLIC include)
if (UNIX)
    target_link_libraries(deadgl PUBLIC m)
endif()
set_source_files_properties(src/deadgl_cli.c PROPERTIES COMPILE_DEFINITIONS main=deadgl_render_main)
add_executable(deadgl_cli src/deadgl_front.c src/deadgl_cli.c src/deadgl_inspect_core.c)
target_link_libraries(deadgl_cli PRIVATE deadgl)
set_target_properties(deadgl_cli PROPERTIES OUTPUT_NAME deadgl)
add_executable(deadgl_inspect src/deadgl_inspect.c src/deadgl_inspect_core.c)
target_link_libraries(deadgl_inspect PRIVATE deadgl)
set_target_properties(deadgl_inspect PROPERTIES OUTPUT_NAME deadgl-inspect)
add_executable(test_deadgl tests/test_deadgl.c)
target_link_libraries(test_deadgl PRIVATE deadgl)
enable_testing()
add_test(NAME core COMMAND test_deadgl)
add_test(NAME version COMMAND deadgl_cli --version)
add_test(NAME inspect_main COMMAND deadgl_cli inspect ${CMAKE_SOURCE_DIR}/examples/near_clip.dgl)
add_test(NAME inspect_version COMMAND deadgl_inspect --version)
add_test(NAME demo_shrine COMMAND deadgl_cli demo shrine -o shrine.ppm)
add_test(NAME demo_cube COMMAND deadgl_cli demo cube -o cube.ppm)
add_test(NAME command_machine COMMAND deadgl_cli run ${CMAKE_SOURCE_DIR}/examples/command_machine.dgl -o command_machine.ppm)
add_test(NAME inspect_near_clip COMMAND deadgl_inspect ${CMAKE_SOURCE_DIR}/examples/near_clip.dgl)
